nullaway_error_a62e6539-2435-404d-928d-3d397c8dfc4c.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TileLayer.java:46: error: [NullAway] dereferenced expression x.getTileCoordinate() is @Nullable
    final Optional<ITile> tile = this.getTiles().stream().filter(x -> x.getTileCoordinate().equals(location)).findFirst();
                                                                                           ^
    (see http://t.uber.com/nullaway )
